--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>H3-PG Demo</title>
     <meta charset='utf-8'>
@@ -7,19 +8,57 @@
     <link rel='stylesheet' href='https://unpkg.com/maplibre-gl@3.4.1/dist/maplibre-gl.css' />
     <script src='https://unpkg.com/maplibre-gl@3.4.1/dist/maplibre-gl.js'></script>
     <style>
-        body { margin: 0; padding: 0; }
-        html, body, #map { height: 100%; }
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        html,
+        body,
+        #map {
+            height: 100%;
+        }
     </style>
 </head>
+
 <body>
-<div id="map"></div>
-<script>
-    const map = new maplibregl.Map({
-        container: 'map',
-        style: 'https://api.maptiler.com/maps/backdrop/style.json?key=',
-        zoom: 11,
-        center: [-73.97, 40.77]
-    });
-</script>
+    <div id="map"></div>
+    <script>
+        const map = new maplibregl.Map({
+            container: 'map',
+            style: 'https://api.maptiler.com/maps/backdrop/style.json?key=',
+            zoom: 11,
+            center: [-73.97, 40.77]
+        });
+
+        map.on('load', () => {
+            map.addSource('manhattan_trees', {
+                type: 'vector',
+                tiles: ['http://localhost:7800/public.manhattan_trees/{z}/{x}/{y}.pbf']
+            });
+            map.addLayer({
+                id: "manhattan_trees",
+                type: "fill",
+                source: "manhattan_trees",
+                "source-layer": "default",
+
+                paint: {
+                    'fill-color': [
+                        'interpolate', ['linear'],
+                        ['number', ['get', 'mean_tree_cover_2021']],
+                        0, '#ececa3',
+                        10, '#b5e550',
+                        25, '#abc32f',
+                        50, '#809c13',
+                        75, '#607c3c',
+                        100, '#013220'
+                    ],
+                    'fill-opacity': 0.8
+                },
+                'filter': ['==', '$type', 'Polygon']
+            });
+        });
+    </script>
 </body>
+
 </html>
