--- a/web/index.html
+++ b/web/index.html
@@ -1,84 +1,93 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
+  <head>
     <title>H3-PG Demo</title>
-    <meta charset='utf-8'>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel='stylesheet' href='https://unpkg.com/maplibre-gl@3.4.1/dist/maplibre-gl.css' />
-    <script src='https://unpkg.com/maplibre-gl@3.4.1/dist/maplibre-gl.js'></script>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/maplibre-gl@3.4.1/dist/maplibre-gl.css"
+    />
+    <script src="https://unpkg.com/maplibre-gl@3.4.1/dist/maplibre-gl.js"></script>
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-        }
+      body {
+        margin: 0;
+        padding: 0;
+      }
 
-        html,
-        body,
-        #map {
-            height: 100%;
-        }
+      html,
+      body,
+      #map {
+        height: 100%;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="map"></div>
     <script>
-        let base_url = 'http://localhost:8888/public.trees/{z}/{x}/{y}.pbf'
-        let params = new URLSearchParams(window.location.search);
-        let name = params.get('name');
-        tile_url = name ? base_url + '?name=' + name : base_url;
+      const base_url = "http://localhost:8888/public.trees/{z}/{x}/{y}.pbf";
+      const params = new URLSearchParams(window.location.search);
+      const name = params.get("name");
+      const tile_url = name ? base_url + "?name=" + name : base_url;
 
-        const map = new maplibregl.Map({
-            container: 'map',
-            style: 'https://api.maptiler.com/maps/backdrop/style.json?key=',
-            zoom: 11,
-            center: [-73.97, 40.77]
+      const map = new maplibregl.Map({
+        container: "map",
+        style:
+          "https://api.maptiler.com/maps/backdrop/style.json?key=",
+        zoom: 11,
+        center: [-73.97, 40.77],
+      });
+
+      map.on("load", () => {
+        map.addSource("trees", {
+          type: "vector",
+          tiles: [tile_url],
+        });
+        map.addLayer({
+          id: "trees",
+          type: "fill",
+          source: "trees",
+          "source-layer": "default",
+
+          paint: {
+            "fill-color": [
+              "interpolate",
+              ["linear"],
+              ["number", ["get", "mean_tree_cover_2021"]],
+              0,
+              "#ececa3",
+              10,
+              "#b5e550",
+              25,
+              "#abc32f",
+              50,
+              "#809c13",
+              75,
+              "#607c3c",
+              100,
+              "#013220",
+            ],
+            "fill-opacity": 0.5,
+          },
+          filter: ["==", "$type", "Polygon"],
         });
 
-        map.on('load', () => {
-            map.addSource('trees', {
-                type: 'vector',
-                tiles: [tile_url]
-            });
-            map.addLayer({
-                id: "trees",
-                type: "fill",
-                source: "trees",
-                "source-layer": "default",
-
-                paint: {
-                    'fill-color': [
-                        'interpolate', ['linear'],
-                        ['number', ['get', 'mean_tree_cover_2021']],
-                        0, '#ececa3',
-                        10, '#b5e550',
-                        25, '#abc32f',
-                        50, '#809c13',
-                        75, '#607c3c',
-                        100, '#013220'
-                    ],
-                    'fill-opacity': 0.5
-                },
-                'filter': ['==', '$type', 'Polygon']
-            });
-
-            map.on('click', 'trees', (e) => {
-                new maplibregl.Popup()
-                    .setLngLat(e.lngLat)
-                    .setHTML(e.features[0].properties.mean_tree_cover_2021)
-                    .addTo(map);
-            });
-
-            map.on('mouseenter', 'trees', () => {
-                map.getCanvas().style.cursor = 'pointer';
-            });
-
-            map.on('mouseleave', 'trees', () => {
-                map.getCanvas().style.cursor = '';
-            });
+        map.on("click", "trees", (e) => {
+          new maplibregl.Popup()
+            .setLngLat(e.lngLat)
+            .setHTML(e.features[0].properties.mean_tree_cover_2021)
+            .addTo(map);
         });
+
+        map.on("mouseenter", "trees", () => {
+          map.getCanvas().style.cursor = "pointer";
+        });
+
+        map.on("mouseleave", "trees", () => {
+          map.getCanvas().style.cursor = "";
+        });
+      });
     </script>
-</body>
-
+  </body>
 </html>
